[package]
name = "lmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
rand = "0.8.5"
roaring = "0.10.1"
seq_io = "0.4.0-alpha.0"
sucds = "0.8.0"

[profile.dev]
opt-level = 1
lto = true
incremental = true

[profile.release]
opt-level = 3
panic = "abort"
lto = true
incremental = true
